// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async 1`] = `
Array [
  Array [
    "test/fixtures/async/dist/index.cjs.js",
    "'use strict';

var _this = undefined;

var a = {
  a: 1
};
var index = (function () {
  return new Promise(function ($return, $error) {
    return $return(Object.assign({}, a, {
      b: _this.b
    }));
  });
});

module.exports = index;
",
  ],
]
`;

exports[`babel:disable-config 1`] = `
Array [
  Array [
    "test/fixtures/babel/with-config/dist/index.cjs.js",
    "'use strict';

function _classCallCheck(instance, Constructor) {
  if (!(instance instanceof Constructor)) {
    throw new TypeError(\\"Cannot call a class as a function\\");
  }
}

var _default = function _default() {
  _classCallCheck(this, _default);
};

module.exports = _default;
",
  ],
]
`;

exports[`babel:object-rest-spread 1`] = `
Array [
  Array [
    "test/fixtures/babel/object-rest-spread/dist/index.cjs.js",
    "'use strict';

var index = Object.assign({}, a);

module.exports = index;
",
  ],
]
`;

exports[`babel:with-config 1`] = `
Array [
  Array [
    "test/fixtures/babel/with-config/dist/index.cjs.js",
    "'use strict';

class index {}

module.exports = index;
",
  ],
]
`;

exports[`banner:object 1`] = `
Array [
  Array [
    "test/fixtures/dist/default.cjs.js",
    "/*!
 * name v1.2.3
 * (c) 2018-present author
 * Released under the GPL License.
 */
'use strict';

var _default = {};

module.exports = _default;
",
  ],
]
`;

exports[`banner:string 1`] = `
Array [
  Array [
    "test/fixtures/dist/default.cjs.js",
    "woot
'use strict';

var _default = {};

module.exports = _default;
",
  ],
]
`;

exports[`banner:true 1`] = `
Array [
  Array [
    "test/fixtures/banner/dist/foo.cjs.js",
    "/*!
 * foo v0.0.0
 * (c) 2015-present name <email@email.com>
 * Released under the MIT License.
 */
'use strict';

var index = 42;

module.exports = index;
",
  ],
]
`;

exports[`buble:async 1`] = `
Array [
  Array [
    "test/fixtures/buble/dist/async.cjs.js",
    "'use strict';

var a = function () { return new Promise(function ($return, $error) {
  return $return({
    a: 'a'
  });
}); };

var async = a().then(function (res) { return Object.assign({}, res); });

module.exports = async;
",
  ],
]
`;

exports[`buble:async-and-object-rest-spread 1`] = `
Array [
  Array [
    "test/fixtures/buble/dist/async-dot-dot-dot.cjs.js",
    "'use strict';

function asyncDotDotDot () {
  return new Promise(function ($return, $error) {
    return Promise.resolve(this.bar()).then(function ($await_1) {
      try {
        return $return(Object.assign({}, $await_1));
      } catch ($boundEx) {
        return $error($boundEx);
      }
    }, $error);
  }.bind(this));
}

module.exports = asyncDotDotDot;
",
  ],
]
`;

exports[`buble:react-jsx 1`] = `
Array [
  Array [
    "test/fixtures/buble/dist/react-jsx.cjs.js",
    "'use strict';

var reactJsx = React.createElement(\\"div\\", {
  a: 1
}, \\"hi\\");

module.exports = reactJsx;
",
  ],
]
`;

exports[`buble:vue-jsx 1`] = `
Array [
  Array [
    "test/fixtures/buble/dist/vue-jsx.cjs.js",
    "'use strict';

var vueJsx = {
  render: function render() {
    var h = arguments[0];
    return h(\\"div\\", {
      attrs: {
        a: 1
      }
    }, [\\"hi\\"]);
  }

};

module.exports = vueJsx;
",
  ],
]
`;

exports[`defaults 1`] = `
Array [
  Array [
    "test/fixtures/defaults/dist/index.cjs.js",
    "'use strict';

var index = 42;

module.exports = index;
",
  ],
]
`;

exports[`exclude file 1`] = `
Array [
  Array [
    "test/fixtures/exclude-file/dist/index.cjs.js",
    "'use strict';

function _interopDefault (ex) { return (ex && (typeof ex === 'object') && 'default' in ex) ? ex['default'] : ex; }

var foo = _interopDefault(require('./foo.js'));



module.exports = foo;
",
  ],
]
`;

exports[`extendOptions 1`] = `
Array [
  Array [
    "test/fixtures/extend-options/dist/bar.cjs.js",
    "'use strict';

var bar = 'bar';

module.exports = bar;
",
  ],
  Array [
    "test/fixtures/extend-options/dist/bar.js",
    "(function (global, factory) {
	typeof exports === 'object' && typeof module !== 'undefined' ? module.exports = factory() :
	typeof define === 'function' && define.amd ? define(factory) :
	(global.umd = factory());
}(this, (function () { 'use strict';

	var bar = 'bar';

	return bar;

})));
",
  ],
  Array [
    "test/fixtures/extend-options/dist/bar.min.js",
    "!function(e,n){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?module.exports=n():\\"function\\"==typeof define&&define.amd?define(n):e.min=n()}(this,function(){\\"use strict\\";return\\"bar\\"});
",
  ],
  Array [
    "test/fixtures/extend-options/dist/foo.cjs.js",
    "'use strict';

var foo = 'foo';

module.exports = foo;
",
  ],
  Array [
    "test/fixtures/extend-options/dist/foo.js",
    "(function (global, factory) {
	typeof exports === 'object' && typeof module !== 'undefined' ? module.exports = factory() :
	typeof define === 'function' && define.amd ? define(factory) :
	(global.umd = factory());
}(this, (function () { 'use strict';

	var foo = 'foo';

	return foo;

})));
",
  ],
  Array [
    "test/fixtures/extend-options/dist/foo.min.js",
    "!function(e,n){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?module.exports=n():\\"function\\"==typeof define&&define.amd?define(n):e.min=n()}(this,function(){\\"use strict\\";return\\"foo\\"});
",
  ],
]
`;

exports[`inline:true 1`] = `
Array [
  Array [
    "test/fixtures/inline/dist/index.cjs.js",
    "'use strict';

var pMap = (iterable, mapper, opts) => new Promise((resolve, reject) => {
	opts = Object.assign({
		concurrency: Infinity
	}, opts);

	if (typeof mapper !== 'function') {
		throw new TypeError('Mapper function is required');
	}

	const concurrency = opts.concurrency;

	if (!(typeof concurrency === 'number' && concurrency >= 1)) {
		throw new TypeError(\`Expected \\\\\`concurrency\\\\\` to be a number from 1 and up, got \\\\\`\${concurrency}\\\\\` (\${typeof concurrency})\`);
	}

	const ret = [];
	const iterator = iterable[Symbol.iterator]();
	let isRejected = false;
	let iterableDone = false;
	let resolvingCount = 0;
	let currentIdx = 0;

	const next = () => {
		if (isRejected) {
			return;
		}

		const nextItem = iterator.next();
		const i = currentIdx;
		currentIdx++;

		if (nextItem.done) {
			iterableDone = true;

			if (resolvingCount === 0) {
				resolve(ret);
			}

			return;
		}

		resolvingCount++;

		Promise.resolve(nextItem.value)
			.then(el => mapper(el, i))
			.then(
				val => {
					ret[i] = val;
					resolvingCount--;
					next();
				},
				err => {
					isRejected = true;
					reject(err);
				}
			);
	};

	for (let i = 0; i < concurrency; i++) {
		next();

		if (iterableDone) {
			break;
		}
	}
});

var pAll = (iterable, opts) => pMap(iterable, el => el(), opts);

var index = {
  all: pAll,
  map: pMap
};

module.exports = index;
",
  ],
]
`;

exports[`inline-certain-modules 1`] = `
Array [
  Array [
    "test/fixtures/inline-certain-modules/dist/index.cjs.js",
    "'use strict';

function _interopDefault (ex) { return (ex && (typeof ex === 'object') && 'default' in ex) ? ex['default'] : ex; }

var another = _interopDefault(require('another-module'));

var fakeModule = function (a) {
  return a;
};

var index = fakeModule(1, another);

module.exports = index;
",
  ],
]
`;

exports[`no-js-transform 1`] = `
Array [
  Array [
    "test/fixtures/no-js-transform/dist/index.cjs.js",
    "'use strict';

var index = () => {};

module.exports = index;
",
  ],
]
`;

exports[`prettier (should ignore min files) 1`] = `
Array [
  Array [
    "test/fixtures/prettier/dist/index.cjs.min.js",
    "\\"use strict\\";Object.defineProperty(exports,\\"__esModule\\",{value:!0});var a=1,d=\\"double stringh\\";function done(){return{prop:343,another:782}}exports.a=a,exports.d=d,exports.done=done;
",
  ],
]
`;

exports[`prettier (should set options) 1`] = `
Array [
  Array [
    "test/fixtures/prettier/dist/index.cjs.js",
    "\\"use strict\\"

Object.defineProperty(exports, \\"__esModule\\", { value: true })

var a = 1
var d = \\"double stringh\\"
function done() {
    var t = {
        prop: 343,
        another: 782,
    }
    return t
}

exports.a = a
exports.d = d
exports.done = done
",
  ],
]
`;

exports[`target:node 1`] = `
Array [
  Array [
    "test/fixtures/target/node/dist/index.cjs.js",
    "'use strict';

class Foo {}

module.exports = Foo;
",
  ],
]
`;

exports[`uglify 1`] = `
Array [
  Array [
    "test/fixtures/uglify/dist/index.cjs.min.js",
    "\\"use strict\\";Object.defineProperty(exports,\\"__esModule\\",{value:!0});var a=1;exports.a=a;
",
  ],
]
`;

exports[`virtualModules 1`] = `
Array [
  Array [
    "test/fixtures/virtual/dist/dayyum.cjs.js",
    "'use strict';

var baz = 2;

var bar = baz + 1;

var dayyum = bar + 123;

module.exports = dayyum;
",
  ],
]
`;
